@@ -13,6 +13,7 @@ import org.irods.jargon.core.exception.DuplicateDataException;
 import org.irods.jargon.core.exception.JargonFileOrCollAlreadyExistsException;
 import org.irods.jargon.core.exception.OverwriteException;
 import org.irods.jargon.core.exception.PathTooLongException;
+import org.irods.jargon.core.packinstr.TransferOptions;
 import org.irods.jargon.core.packinstr.TransferOptions.ForceOption;
 import org.irods.jargon.core.pub.domain.DataObject;
 import org.irods.jargon.core.pub.domain.Resource;
@@ -429,7 +430,17 @@ public class DataTransferOperationsImplTest {
 				.getIRODSAccessObjectFactory().getDataTransferOperations(
 						irodsAccount);
 
-		dataTransferOperationsAO.putOperation(localFile, destFile, null, null);
+		TransferOptions transferOptions = new TransferOptions();
+		transferOptions.setComputeAndVerifyChecksumAfterTransfer(true);
+		transferOptions.setMaxThreads(0);
+		transferOptions.setUseParallelTransfer(false);
+
+		TransferControlBlock transferControlBlock = DefaultTransferControlBlock
+				.instance();
+		transferControlBlock.setTransferOptions(transferOptions);
+
+		dataTransferOperationsAO.putOperation(localFile, destFile, null,
+				transferControlBlock);
 		assertionHelper.assertIrodsFileMatchesLocalFileChecksum(
 				destFile.getAbsolutePath(), localFile.getAbsolutePath());
 	}
@@ -2604,7 +2615,7 @@ public class DataTransferOperationsImplTest {
 
 		IRODSFile targetParent = irodsFileFactory
 				.instanceIRODSFile(irodsCollectionTargetAbsolutePath);
-		targetParent.mkdirs();
+		// targetParent.mkdirs();
 
 		dataTransferOperationsAO.move(irodsCollectionRootAbsolutePath + "/"
 				+ rootCollection, targetParent.getAbsolutePath());
@@ -2612,66 +2623,76 @@ public class DataTransferOperationsImplTest {
 		irodsFileSystem = IRODSFileSystem.instance();
 		irodsFileFactory = irodsFileSystem.getIRODSFileFactory(irodsAccount);
 		destFile = irodsFileFactory
-				.instanceIRODSFile(irodsCollectionTargetAbsolutePath + "/"
-						+ rootCollection);
+				.instanceIRODSFile(irodsCollectionTargetAbsolutePath);
 
 		Assert.assertTrue("did not find expected targetcollection",
 				destFile.isDirectory());
 	}
 
-	// see note in release notes...potential bug?
-	@Ignore
-	public void testMoveCollectionWithTwoFilesUnderneathSameParent()
-			throws Exception {
+	@Test
+	public void testMoveCollectionRenameUnderParent() throws Exception {
 
 		// this test case passes if no error, tests code to avoid irods error
 		// -837000
-		String rootCollection = "testMoveCollectionWithTwoFilesUnderneathAParent";
-		String targetCollection = "testMoveCollectionWithTwoFilesUnderneathAParentNewTarget";
+		String rootCollection = "testMoveCollectionRenameUnderParent";
 
-		String localCollectionAbsolutePath = scratchFileUtils
-				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH
-						+ '/' + rootCollection);
+		String lvl1 = "lvl1";
+		String lvl2 = "lvl2";
+		String lvl3 = "lvl3";
 
 		String irodsCollectionRootAbsolutePath = testingPropertiesHelper
 				.buildIRODSCollectionAbsolutePathFromTestProperties(
-						testingProperties, IRODS_TEST_SUBDIR_PATH);
-
-		String irodsCollectionTargetAbsolutePath = testingPropertiesHelper
-				.buildIRODSCollectionAbsolutePathFromTestProperties(
 						testingProperties, IRODS_TEST_SUBDIR_PATH + "/"
-								+ rootCollection + "/" + targetCollection);
-
-		FileGenerator
-				.generateManyFilesAndCollectionsInParentCollectionByAbsolutePath(
-						localCollectionAbsolutePath,
-						"testMoveCollectionWithTwoFilesUnderneathAParent", 1,
-						1, 1, "testFile", ".txt", 2, 2, 1, 2);
+								+ rootCollection);
 
 		IRODSAccount irodsAccount = testingPropertiesHelper
 				.buildIRODSAccountFromTestProperties(testingProperties);
 
 		IRODSFileFactory irodsFileFactory = irodsFileSystem
 				.getIRODSFileFactory(irodsAccount);
-		IRODSFile destFile = irodsFileFactory
+		IRODSFile dirFile = irodsFileFactory
 				.instanceIRODSFile(irodsCollectionRootAbsolutePath);
+
+		dirFile.mkdirs();
+
+		dirFile = irodsFileFactory.instanceIRODSFile(dirFile.getAbsolutePath(),
+				lvl1);
+		dirFile.mkdir();
+
+		dirFile = irodsFileFactory.instanceIRODSFile(dirFile.getAbsolutePath(),
+				lvl2);
+
+		String dirFileLvl2Name = dirFile.getAbsolutePath();
+
+		dirFile.mkdir();
+
+		dirFile = irodsFileFactory.instanceIRODSFile(dirFile.getAbsolutePath(),
+				lvl3);
+		dirFile.mkdir();
+
 		DataTransferOperations dataTransferOperationsAO = irodsFileSystem
 				.getIRODSAccessObjectFactory().getDataTransferOperations(
 						irodsAccount);
-		File localFile = new File(localCollectionAbsolutePath);
 
-		dataTransferOperationsAO.putOperation(localFile, destFile, null, null);
+		// rename lvl2 to lvl2 renamed
 
-		// make the target
+		dataTransferOperationsAO.move(dirFileLvl2Name,
+				irodsCollectionRootAbsolutePath + "/lvl1/lvl2-renamed");
 
-		IRODSFile targetParent = irodsFileFactory
-				.instanceIRODSFile(irodsCollectionTargetAbsolutePath);
-		targetParent.mkdirs();
+		IRODSFile actualFile = irodsFileFactory
+				.instanceIRODSFile(irodsCollectionRootAbsolutePath
+						+ "/lvl1/lvl2-renamed");
+		Assert.assertTrue("renamed file does not exist", actualFile.exists());
 
-		dataTransferOperationsAO.move(irodsCollectionRootAbsolutePath + "/"
-				+ rootCollection, targetParent.getAbsolutePath());
+		String[] actualChildren = actualFile.list();
 
-		Assert.assertTrue(true);
+		Assert.assertEquals("should be 1 child", 1, actualChildren.length);
+
+		String actualChildName = actualChildren[0];
+
+		Assert.assertEquals("did not find expected child file", lvl3,
+				actualChildName);
+
 	}
 
 	@Ignore
