@@ -41,6 +41,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1726] need to add back flushes for 3.2 compatability
 **add a force.pam.flush jargon property for pre 3.3 servers.  This is set in jargon.properties and is false by default.  If you are running Jargon against iRODS 3.2, you may find that pam operations freeze, and this flag needs to be set to force some extra flushes that were required.  This setting will negatively impact performance so it should be turned off for iRODS 3.3.
 
+*[#1840] error doing a rename in idrop
+**error with rename of a folder under a parent adding intermediate directory
+
 *Numerous small fixes and improvements since the 3.3.1 release.
 
 ==Features==
